fix the wonky footer styling on mobile

--- a/content/public/styles/footer.css
+++ b/content/public/styles/footer.css
@@ -1,7 +1,5 @@
 :root {
     min-height: 100%;
-    --footer-height: 10rem;
-}
 
 
 
@@ -14,7 +12,7 @@ footer {
     background-color: var(--header-background);
     color: var(--header-text);
     padding: 24px;
-    height: var(--footer-height);
+    min-height: 10rem;
 }
 
 footer>p {
